--- a/src/app/pages/board/groupboard/groupboard.page.html
+++ b/src/app/pages/board/groupboard/groupboard.page.html
@@ -182,13 +182,13 @@
         </ion-col>
         <ion-col>
           <ion-button fill="clear" size="small" (click)="openPost(post)">
-            <ion-icon name="text"></ion-icon>
+            <ion-icon name="chatbox-ellipses"></ion-icon>
             {{post.comments?.length}} Comments
           </ion-button>
         </ion-col>
         <ion-col>
           <ion-button fill="clear" size="small" (click)="presentPickPeoplePopover($event)">
-            <ion-icon name="share-alt"></ion-icon>Share
+            <ion-icon name="share"></ion-icon>Share
           </ion-button>
         </ion-col>
       </ion-row>
