--- a/src/app/pages/board/groupboard/groupboard.page.scss
+++ b/src/app/pages/board/groupboard/groupboard.page.scss
@@ -113,6 +113,7 @@ app-groupboard {
   }
 
   .short-paragraph {
+    color: var(--ion-color-dark);
     max-height: 80px;
     line-height: 20px; /* Height / no. of lines to display */
     overflow: hidden;
