--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -43,7 +43,7 @@
               <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
             </ion-button>-->
             <ion-button class="info-moment ion-no-padding ion-no-margin" (click)="removeActivity($event, sample)" fill="clear" size="small" *ngIf="categoryId === '5c915476e172e4e64590e349'">
-              <ion-icon name="close" color="secondary"></ion-icon>
+              <ion-icon name="close" color="primary"></ion-icon>
             </ion-button>
           </ion-card>
         </ion-col>
