--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -690,7 +690,7 @@ app-showfeature {
   }
 
   .goal-content {
-    background: white;
+    background: var(--ion-color-secondary);
     margin-left: 15px;
   }
 
