--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -15,7 +15,7 @@
         <ion-icon name="videocam" color="primary"></ion-icon>
       </ion-button>
       <ion-button (click)="seeMoreInfo()">
-        <ion-icon name="more" color="primary"></ion-icon>
+        <ion-icon ios="ellipsis-horizontal" md="ellipsis-vertical" color="primary"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
