--- a/src/app/pages/manage/billing/billing.page.html
+++ b/src/app/pages/manage/billing/billing.page.html
@@ -83,7 +83,7 @@
         <ion-item>
           <ion-label position="stacked">Country</ion-label>
           <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="country">
-            <ion-select-option value="US" [selected]='true'>United States</ion-select-option>
+            <ion-select-option value="US" [class.selected]='true'>United States</ion-select-option>
             <ion-select-option value="AU">Australia</ion-select-option>
             <ion-select-option value="AT">Austria</ion-select-option>
             <ion-select-option value="BE">Belgium</ion-select-option>
